[package]
name = "backend-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = {version="1.2.1",features = ["v4"]}
serde = {version="1.0.147", features=["derive"]}
serde_json = "1.0.87"
env_logger = "0.10.0"
derive_more = "0.99.17"
actix-cors = "0.6.4"
